<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_id">1415789708655802</string>
    <string name="accept">Accept</string>
    <string name="app_name">bumpr</string>
    <string name="app_title">bumpr.</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="create_trip">Create Trip</string>
    <string name="decline">Decline</string>
    <string name="dollar_sign">$</string>
    <string name="end_loc">End Address</string>
    <string name="email">Email</string>
    <string name="gcm_sender_id">130758040838</string>
    <string name="first_name">First Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="or">or</string>
    <string name="passengers"># of Passengers:</string>
	<string name="password">********</string>
	<string name="register">Register</string>
	<string name="search_title">Enter Destination...</string>
	<string name="start_loc">Start Address</string>
	<string name="submit">Submit</string>
	<string name="tags">Trip Tags (Comma Separated)</string>
	<string name="to">to</string>
	<string name="trip_title">Trip Title</string>
	<string name="trip_date">Trip Date:</string>
	<string name="trip_price">Price</string>
	<string name="request_me">Request Me</string>
	
</resources>
