<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f8f8ff"
    tools:context=".LoginActivity" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="60sp"
        android:text="@string/app_title" />
   <RelativeLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >
        <EditText android:id="@+id/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="300dp"
            android:layout_height="wrap_content" 
            android:maxLines="1"
            android:hint="@string/email"/>
        <EditText android:id="@+id/et_password"
            android:inputType="textPassword"
    		android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
			android:maxLines="1"
            android:hint="@string/password" />
        <Button android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:layout_marginTop="5dp"
            android:background="#e6e6fa"
            android:onClick="login"
            android:text="@string/login" />
		<Button android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="10dp"
            android:background="#e6e6fa"
            android:text="@string/register"
            android:onClick="toRegistration" />
        <View android:id="@+id/left_divider"
 			android:layout_width="130dp"
 			android:layout_height="1dp"
 			android:layout_alignParentLeft="true"
 			android:layout_below="@id/btn_register"
 			android:layout_marginTop="15dp"
 			android:background="@android:color/black" />
        <TextView android:id="@+id/or"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="5dp"
			android:layout_centerHorizontal="true"
            android:layout_below="@id/btn_register"
            android:text="@string/or" />
        <View android:id="@+id/right_divider"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_alignRight="@id/btn_register"
            android:layout_below="@id/btn_register"
            android:layout_marginTop="15dp"
            android:background="@android:color/black" />
        <Button android:id="@+id/btn_login_with_fb"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/or"
            android:layout_marginTop="5dp"
            android:background="#e6e6fa"
            android:text="@string/login_with_fb"
            android:onClick="loginWithFacebook" />
    </RelativeLayout>

</RelativeLayout>
