<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_password_confirmation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_confirmation"
        android:layout_centerHorizontal="true"
        android:hint="@string/first_name"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_firstname"
        android:layout_centerHorizontal="true"
        android:hint="@string/last_name"
        android:inputType="textCapWords"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_lastname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#e6e6fa"
        android:onClick="register"
        android:text="@string/register" />

</RelativeLayout>